git-svn-id: https://svn.code.sf.net/p/fiveinarowproj/code@3 ecd31079-f6c6-41f0-b2e7-2f195433bb36

--- a/FiveInARow/nbproject/project.properties
+++ b/FiveInARow/nbproject/project.properties
@@ -37,7 +37,7 @@ javac.test.classpath=\
     ${libs.junit.classpath}:\
     ${libs.junit_4.classpath}
 javadoc.additionalparam=
-javadoc.author=false
+javadoc.author=true
 javadoc.encoding=${source.encoding}
 javadoc.noindex=false
 javadoc.nonavbar=false
@@ -45,7 +45,7 @@ javadoc.notree=false
 javadoc.private=false
 javadoc.splitindex=true
 javadoc.use=true
-javadoc.version=false
+javadoc.version=true
 javadoc.windowtitle=
 jnlp.codebase.type=local
 jnlp.codebase.url=file:/home/kaligula/NetBeansProjects/FiveInARow/dist/
